modify shippable build configuration file

--- a/shippable.yml
+++ b/shippable.yml
@@ -5,8 +5,8 @@ python:
 
 build:                                                  
   pre_ci_boot:                          
-    image_name: dry-doc/u14pyt
-    image_tag: prod
+    image_name: dry-dock/u14pyt
+    image_tag:
     pull: true
     options:
 
